@@ -1,6 +1,8 @@
 0.15 - 2012xxxx
+===============
 
 - Add support for $SYS/broker/clients/maximum topic.
+- Add support for $SYS messages/byte per second received/sent topics.
 - Updated mosquitto man page - $SYS hierarchy and signal support were out of
   date.
 - Auto generated pub/sub client ids now include the hostname.
